--- a/well-nuts-node/package.json
+++ b/well-nuts-node/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15"
   }
