--- a/well-nuts-react/package.json
+++ b/well-nuts-react/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.4.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^0.24.0",
+    "bootstrap": "^4.6.1",
+    "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
